--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "main": "server.js",
   "scripts": {
     "test": "NODE_ENV=test npx jest",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,9 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "globals": "^16.1.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.0"
   }
