--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.4",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=test npx jest",
-    "test:api": "newman run ./tests/postman/FresichFarm.postman_collection.json",
-    "test:api:watch": "newman run ./tests/postman/FresichFarm.postman_collection.json --watch",
-    "test:all": "npm run test && npm run test:api",
+    "test:newman": "newman run ./tests/postman/FresichFarm.postman_collection.json",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint ."
@@ -17,24 +14,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@babel/runtime": "^7.27.1",
+    "@babel/runtime": "^7.27.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.1.0",
-    "mongoose": "^8.14.1",
-    "newman": "^6.2.1",
+    "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.27.1",
-    "@babel/preset-env": "^7.27.1",
-    "@eslint/js": "^9.26.0",
-    "eslint": "^9.26.0",
-    "globals": "^16.1.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.0"
+    "@babel/plugin-transform-runtime": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0"
   }
 }
