--- a/example.env
+++ b/example.env
@@ -2,3 +2,8 @@ MONGO_URI=mongodb://admin:test@localhost:27017/
 JWT_SECRET=*
 MAILTRAP_TOKEN=*
 CLIENT_URL=http://localhost:####
+
+# Special token for testing (replace with your own secure token)
+SPECIAL_TOKEN=your_special_token_here
+# Test user ID (replace with an actual user ID from your database)
+TEST_USER_ID=000000000000000000000000
