--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.1.11.1",
+  "version": "0.1.11.2",
   "main": "server.js",
   "scripts": {
     "test:newman": "newman run ./tests/postman/FresichFarm.postman_collection.json",
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.27.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
