--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "backend",
-  "version": "0.1.11.2",
-  "main": "server.js",
-  "scripts": {
-    "test:newman": "newman run ./tests/postman/FresichFarm.postman_collection.json",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "type": "module",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@babel/runtime": "^7.27.6",
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^4.1.0",
-    "mongoose": "^8.15.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.10",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "@eslint/js": "^9.28.0",
-    "eslint": "^9.28.0",
-    "globals": "^16.2.0"
-  }
+	"name": "backend",
+	"version": "0.1.11.2",
+	"main": "server.js",
+	"scripts": {
+		"test:newman": "newman run ./tests/postman/FresichFarm.postman_collection.json",
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"lint": "eslint ."
+	},
+	"keywords": [],
+	"author": "",
+	"type": "module",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@babel/runtime": "^7.27.6",
+		"bcryptjs": "^3.0.2",
+		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"mailtrap": "^4.1.0",
+		"mongoose": "^8.15.1",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.10",
+		"winston": "^3.17.0"
+	},
+	"devDependencies": {
+		"@babel/plugin-transform-runtime": "^7.27.4",
+		"@babel/preset-env": "^7.27.2",
+		"@biomejs/biome": "1.9.4",
+		"@eslint/js": "^9.28.0",
+		"eslint": "^9.28.0",
+		"globals": "^16.2.0"
+	}
 }
