--- a/example.env
+++ b/example.env
@@ -1,9 +1,15 @@
-MONGO_URI=mongodb://admin:test@localhost:27017/
-JWT_SECRET=*
-MAILTRAP_TOKEN=*
-CLIENT_URL=http://localhost:####
+MONGO_URI=###
+JWT_SECRET=secret
+MAILTRAP_TOKEN=###
+CLIENT_URL=http://localhost:8000
 
 # Special token for testing (replace with your own secure token)
 SPECIAL_TOKEN=your_special_token_here
 # Test user ID (replace with an actual user ID from your database)
 TEST_USER_ID=000000000000000000000000
+
+SMTP_HOST=###
+SMTP_PORT=###
+SMTP_USER=###
+SMTP_PASS=###
+SMTP_SECURE=###
