--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongoose": "^8.15.1",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.10",
+		"stripe": "^18.2.1",
 		"winston": "^3.17.0"
 	},
 	"devDependencies": {
