--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@biomejs/biome": "2.0.0",
 		"@eslint/js": "^9.28.0",
 		"eslint": "^9.28.0",
-		"globals": "^16.2.0"
+		"globals": "^16.2.0",
+		"knip": "^5.61.3"
 	}
 }
