--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"description": "",
 	"dependencies": {
 		"@babel/runtime": "^7.27.6",
+		"@faker-js/faker": "^9.9.0",
 		"bcryptjs": "^3.0.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
@@ -24,6 +25,7 @@
 		"mjml": "^4.15.3",
 		"mongoose": "^8.15.1",
 		"morgan": "^1.10.0",
+		"nodemailer": "^7.0.4",
 		"nodemon": "^3.1.10",
 		"stripe": "^18.2.1",
 		"winston": "^3.17.0"
