--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"mjml": "^4.15.3",
 		"mongoose": "^8.15.1",
 		"morgan": "^1.10.0",
+		"mustache": "^4.2.0",
 		"nodemailer": "^7.0.4",
 		"nodemon": "^3.1.10",
 		"stripe": "^18.2.1",
