--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
+		"express-rate-limit": "^7.5.1",
+		"geoip-lite": "^1.4.10",
 		"jsonwebtoken": "^9.0.2",
 		"mjml": "^4.15.3",
 		"mongoose": "^8.15.1",
