--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-rate-limit": "^7.5.1",
+		"express-validator": "^7.2.1",
 		"geoip-lite": "^1.4.10",
 		"jsonwebtoken": "^9.0.2",
 		"mjml": "^4.15.3",
