--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express-rate-limit": "^7.5.1",
 		"express-validator": "^7.2.1",
 		"geoip-lite": "^1.4.10",
+		"helmet": "^8.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mjml": "^4.15.3",
 		"mongoose": "^8.15.1",
